# trochoid-py

./: .gitignore  LICENSE  demo.ipynb  pyproject.toml  readme.md  trochoid.py
scripts/: demo.ipynb  demo.py  draw.py
src/trochoid/: __init__.py  trochoid.py
